fix loading overlay not centering, align colors with dialog

--- a/src/app/modules/endpoint-state/components/endpoint-state.component.css
+++ b/src/app/modules/endpoint-state/components/endpoint-state.component.css
@@ -180,11 +180,11 @@
   z-index: 1000; /* Specify a stack order in case you're using a different order for other elements */
   animation: fadein 0.3s ease-in-out;
   /*opacity:0.5;*/
-  background-color:rgba(128,128,128,0.7);
+  background-color:rgba(120,120,120,0.4);
   /*backdrop-filter: blur(5px);*/
 }
 #spinner{
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   font-size: 64px;
